[package]
name = "git-wait"
version = "0.2.0"
edition = "2021"
authors = ["Darshan Parajuli <parajulidarshan@gmail.com>"]
description = "A simple wrapper utility around git that waits until index.lock file is no longer present running the command."
repository = "https://github.com/darshanparajuli/git-wait"
readme = "README.md"
keywords = ["git"]
categories = ["development-tools"]
license = "MIT"

[dependencies]
exec = "0.3.1"
notify = "7.0.0"
